sidebar overlap and footer fix

--- a/hyrax/app/assets/stylesheets/partials/_builtby_footer.scss
+++ b/hyrax/app/assets/stylesheets/partials/_builtby_footer.scss
@@ -3,6 +3,8 @@ $gold: #EAAA00;
 $gray-text: #ccc; 
 
 .library_credit_line {
+  position: fixed;
+  bottom: 0;
   width:100%;
   float:left;
   background: darken($blue, 10%);
